Fixed spacing

--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -66,7 +66,7 @@ body {
 
   @media screen and (max-width: $break) {
     width: 100%;
-    padding:20px;
+    padding:10px;
   }
 }
 
